//
// Created by AndrejŠišila on 3/30/2023.
//

#pragma once

namespace production {
    enum class UserRole {
        USER,
        ADMIN
    };

}
